adding a button and small fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Hello World</h1>
         <p>
-            Abel is the boss.
+            Mercuriete is the boss.
         </p>
         <!-- Raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
